--- a/horariodeatendimento.html
+++ b/horariodeatendimento.html
@@ -38,12 +38,13 @@
     
             <div class="content">
                <!-- Aqui vai o seu conteúdo -->
-               <table sumary="Tabela de preços de cada especialidades e serviços" border="2" width="10" cellspacing="3" cellpadding="5" align="center">
+               <table sumary="Tabela de preços de cada especialidades e serviços" width="10" cellspacing="3" cellpadding="5" align="center">
+                <caption><u><strong> TABELA DE SERVIÇOS E PREÇOS</strong></u></caption>
                    <tr>
-                       <td>Atendimento Dias da Semana</td>
-                       <td>Especialidades</td>
-                       <td>Horário de Atendimento</td>
-                       <td>Valores R$</td>
+                       <th>Atendimento Dias da Semana</th>
+                       <th>Especialidades</th>
+                       <th>Horário de Atendimento</th>
+                       <th>Valores R$</th>
                        
                    </tr>
                    <tr>
