pequena mudança no texto.
Mudança no texto apenas para justificar um commit.

--- a/agendarconsulta.html
+++ b/agendarconsulta.html
@@ -64,7 +64,7 @@
                     <label>Já Foi Atendido Aqui Antes?</label><input type="checkbox">
                     <label>Nosso Atendimento Foi Satisfatório?</label><input type="checkbox"> <br>
                     <label>Recomendaria a Outros Nossa Clínica?</label><input type="checkbox"> <br> <br>
-                <textarea rows="10" cols="100" name="mensage">Sua Opinião e Sugestões são importantes para nós. Digite Aqui:
+                <textarea rows="10" cols="100" name="mensage">Sua Opinião e Sugestões são importantes para nós. Fale Conosco, Digite Aqui:
 
                 </textarea><br><br>
        
